force-app/main/default/objects/Opportunity/fields/ARR_company_currency__c.field-meta.xml
<CustomField>
    <fullName>ARR_company_currency__c</fullName>
    <formula>Total_Monthly_Recurring__c   * 12</formula>
    <label>ARR (Company Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>