force-app/main/default/objects/Opportunity/fields/BDR_SDR__c.field-meta.xml
<CustomField>
    <fullName>BDR_SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDR/SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>