force-app/main/default/objects/Opportunity/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>