force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed-Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>