force-app/main/default/objects/Opportunity/fields/Compatibility_Data__c.field-meta.xml
<CustomField>
    <fullName>Compatibility_Data__c</fullName>
    <label>Compatibility Data</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>