force-app/main/default/objects/Opportunity/fields/Contains_Data_Integration__c.field-meta.xml
<CustomField>
    <fullName>Contains_Data_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by quote configurator. True if any line item contains a value for Data Integration. Mapped to Ironclad to render the appropriate fields in the launch form.</description>
    <label>Contains Data Integration</label>
    <type>Checkbox</type>
</CustomField>