force-app/main/default/objects/Opportunity/fields/Contains_Discount__c.field-meta.xml
<CustomField>
    <fullName>Contains_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Discount</label>
    <type>Checkbox</type>
</CustomField>