force-app/main/default/objects/Opportunity/fields/Contains_New_Integration__c.field-meta.xml
<CustomField>
    <fullName>Contains_New_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by quote configurator. True if any line item has a Data Integration value of &quot;Net New Integration&quot; and a non-blank value for New Integration Name. Mapped to Ironclad to render the appropriate fields in the launch form.</description>
    <label>Contains New Integration</label>
    <type>Checkbox</type>
</CustomField>