force-app/main/default/objects/Opportunity/fields/Contract_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Discount__c</fullName>
    <label>Contract Term Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>