force-app/main/default/objects/Opportunity/fields/Cumulative_Credited_Sites__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Credited_Sites__c</fullName>
    <label>Cumulative Credited Sites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>