force-app/main/default/objects/Opportunity/fields/Data_Contact__c.field-meta.xml
<CustomField>
    <fullName>Data_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Data Contact Opportunities</relationshipLabel>
    <relationshipName>OpportunityDataContact</relationshipName>
    <type>Lookup</type>
</CustomField>