force-app/main/default/objects/Opportunity/fields/Deal_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Deal_Trigger__c</fullName>
    <label>Deal Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales (hunted)</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Event/Trade-show</fullName>
            </value>
            <value>
                <fullName>Expansion - Partner/Channel</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Customer referral</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Enterprise - Partner/Channel</fullName>
            </value>
            <value>
                <fullName>Enterprise expansion</fullName>
            </value>
            <value>
                <fullName>Enterprise event</fullName>
            </value>
            <value>
                <fullName>Partner pipeline</fullName>
            </value>
            <value>
                <fullName>Partner Marketing</fullName>
            </value>
            <value>
                <fullName>BDR (Hunted)</fullName>
            </value>
            <value>
                <fullName>Partnership (Hunted)</fullName>
            </value>
            <value>
                <fullName>Partner lead (referral)</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>