force-app/main/default/objects/Opportunity/fields/Future_Sites__c.field-meta.xml
<CustomField>
    <fullName>Future_Sites__c</fullName>
    <label>Future Sites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>