force-app/main/default/objects/Opportunity/fields/Highest_Discount_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Highest_Discount_Add_Ons__c</fullName>
    <description>The highest discount percentage applied to any Add-On product line item on this Quote / Sales Order</description>
    <label>Highest Discount - Add-Ons</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>