force-app/main/default/objects/Opportunity/fields/Highest_Discount_Cameras__c.field-meta.xml
<CustomField>
    <fullName>Highest_Discount_Cameras__c</fullName>
    <description>The highest discount percentage applied to any Camera line item on this Quote / Sales Order</description>
    <label>Highest Discount - Cameras</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>