force-app/main/default/objects/Opportunity/fields/Highest_Discount_Field_Services__c.field-meta.xml
<CustomField>
    <fullName>Highest_Discount_Field_Services__c</fullName>
    <description>The highest discount percentage applied to any Field Services &amp; Labor line item on this Quote / Sales Order</description>
    <label>Highest Discount - Field Services</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>