force-app/main/default/objects/Opportunity/fields/Highest_Discount_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Highest_Discount_Hardware__c</fullName>
    <description>The highest discount percentage applied to any Hardware &amp; Accessories line item on this Quote / Sales Order</description>
    <label>Highest Discount - Hardware</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>