force-app/main/default/objects/Opportunity/fields/Install_Contact__c.field-meta.xml
<CustomField>
    <fullName>Install_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Install Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Install Contact Opportunities</relationshipLabel>
    <relationshipName>OpportunityInstallContact</relationshipName>
    <type>Lookup</type>
</CustomField>