force-app/main/default/objects/Opportunity/fields/Is_CompatibilityDataExist__c.field-meta.xml
<CustomField>
    <fullName>Is_CompatibilityDataExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CompatibilityDataExist</label>
    <type>Checkbox</type>
</CustomField>