force-app/main/default/objects/Opportunity/fields/Key_Objections__c.field-meta.xml
<CustomField>
    <fullName>Key_Objections__c</fullName>
    <label>Key Objections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>