force-app/main/default/objects/Opportunity/fields/Marketing_Campaign_Primary__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign_Primary__c</fullName>
    <label>Marketing Campaign (Primary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>