force-app/main/default/objects/Opportunity/fields/Marketing_Sub_Lead_Source_Content__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Sub_Lead_Source_Content__c</fullName>
    <label>Marketing Sub Lead Source Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>