force-app/main/default/objects/Opportunity/fields/MEDDICC_Summary__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Summary__c</fullName>
    <label>MEDDICC Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>