force-app/main/default/objects/Opportunity/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <label>Number of Sites</label>
    <summaryForeignKey>Opportunity_Site__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>