force-app/main/default/objects/Opportunity/fields/Onsite_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsite Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Onsite Contact Name)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>