force-app/main/default/objects/Opportunity/fields/Other_Delta_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Delta_Type__c</fullName>
    <label>Specify Other Add-on/Delta Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>