force-app/main/default/objects/Opportunity/fields/Partner_Name_Single_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name_Single_Line_Text__c</fullName>
    <label>Partner Name (single-line text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>