force-app/main/default/objects/Opportunity/fields/Pilot_Business_Problem__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Business_Problem__c</fullName>
    <label>Pilot Business Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>