force-app/main/default/objects/Opportunity/fields/Pilot_Term__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Term__c</fullName>
    <label>Pilot Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>