force-app/main/default/objects/Opportunity/fields/Pilot_Type__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Type__c</fullName>
    <label>Pilot Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>