force-app/main/default/objects/Opportunity/fields/POS_Type__c.field-meta.xml
<CustomField>
    <fullName>POS_Type__c</fullName>
    <label>POS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>