force-app/main/default/objects/Opportunity/fields/Pricing_Procurement_Signals__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Procurement_Signals__c</fullName>
    <label>Pricing &amp; Procurement Signals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>