force-app/main/default/objects/Opportunity/fields/Primary_Competitive_Threat__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitive_Threat__c</fullName>
    <label>Primary Competitive Threat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>