force-app/main/default/objects/Opportunity/fields/Recently_Clawedback_Sites__c.field-meta.xml
<CustomField>
    <fullName>Recently_Clawedback_Sites__c</fullName>
    <label>Recently Clawedback Sites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>