force-app/main/default/objects/Opportunity/fields/Required_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Level__c</fullName>
    <description>The highest authority approver that needs to approve this opportunity&apos;s quote</description>
    <label>Required Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Leader</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>