force-app/main/default/objects/Opportunity/fields/Reseller_Discount__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Discount__c</fullName>
    <label>Reseller Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>