force-app/main/default/objects/Opportunity/fields/Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Segment__c</fullName>
    <label>Sales Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>QSR</fullName>
            </value>
            <value>
                <fullName>QSR Upmarket</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>