force-app/main/default/objects/Opportunity/fields/SE_Notes__c.field-meta.xml
<CustomField>
    <fullName>SE_Notes__c</fullName>
    <label>SE Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>