force-app/main/default/objects/Opportunity/fields/Shipping_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Full_Name__c</fullName>
    <label>Shipping Contact Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>