force-app/main/default/objects/Opportunity/fields/Shipping_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Phone_Number__c</fullName>
    <label>Shipping Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>