force-app/main/default/objects/Opportunity/fields/Site_Survey_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Notes__c</fullName>
    <label>Site Survey Notes</label>
    <type>TextArea</type>
</CustomField>