force-app/main/default/objects/Opportunity/fields/Site_Survey_Quote_Signed_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Quote_Signed_by_Customer__c</fullName>
    <label>Site Survey Quote Signed by Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>