force-app/main/default/objects/Opportunity/fields/Site_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Status__c</fullName>
    <label>Site Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More Information Required</fullName>
            </value>
            <value>
                <fullName>Sent to Scheduling</fullName>
            </value>
            <value>
                <fullName>Scheduling In Progress</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Results Submission</fullName>
            </value>
            <value>
                <fullName>Validating Results</fullName>
            </value>
            <value>
                <fullName>Pending Signature of a New Quote</fullName>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>