force-app/main/default/objects/Opportunity/fields/Site_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Type__c</fullName>
    <label>Site Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input Requested</fullName>
                <default>true</default>
                <label>Input Requested</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Paid Survey</fullName>
            </value>
            <value>
                <fullName>Paid Night-time Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>