force-app/main/default/objects/Opportunity/fields/SKU_In_Order__c.field-meta.xml
<CustomField>
    <fullName>SKU_In_Order__c</fullName>
    <label>SKU In Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>