force-app/main/default/objects/Opportunity/fields/Specific_Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Specific_Billing_Notes__c</fullName>
    <label>Specific Billing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>