force-app/main/default/objects/Opportunity/fields/Specify_Other_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other_Competitor__c</fullName>
    <label>Specify &quot;Other&quot; Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>