force-app/main/default/objects/Opportunity/fields/Sub_Lead_Source_Auto__c.field-meta.xml
<CustomField>
    <fullName>Sub_Lead_Source_Auto__c</fullName>
    <label>Sub lead source (auto)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>