force-app/main/default/objects/Opportunity/fields/Success_Metrics_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics_KPIs__c</fullName>
    <label>Success Metrics (KPIs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>