force-app/main/default/objects/Opportunity/fields/Total_Monthly_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Recurring__c</fullName>
    <label>Total Monthly Recurring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>