force-app/main/default/objects/Opportunity/fields/Total_One_Time_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Fees__c</fullName>
    <label>Total One Time Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>